# bitcoin-miner

./: Cargo.toml
assets/texture/: nature_tileset.ron
assets/ui/: example.ron  menu.ron  menus.ron  pause_menu.ron
config/: bindings.ron  display.ron
src/: chunked_map.rs  events.rs  exampletile.rs  game_data.rs  gamestate.rs  main.rs  mainmenu.rs  map.rs  map_structure.rs  menuevents.rs  move_button_on_click.rs  pause.rs
src/states/: gamestate.rs  mainmenu.rs  mod.rs  pause.rs
src/systems/: camera_movement.rs  camera_switch.rs  chunk_system.rs  mainmenu.rs  map_movement.rs  mod.rs
