[package]
name = "bitcoin-miner"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
rand = "0.7.3"
noise = "0.6.0"

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan", "tiles"]